bitfields/tests/compile_error_cases/bitfield_field_defined_bits_more_than_bitfield_type_size.stderr
error: The total number of bits of the fields (36 bits) is greater than the number of bits of the bitfield type 'u32' (32 bits).
 --> tests/compile_error_cases/bitfield_field_defined_bits_more_than_bitfield_type_size.rs:7:12
  |
7 | #[bitfield(u32)]
  |            ^^^
